<resources>
    <string name="app_name">Admin KIMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="msg_user">Hi Username</string>
    <string name="home">Home</string>
    <string name="claim">Claim</string>
    <string name="approval">Approval</string>
    <string name="profile">Profile</string>
    <string name="product">Product</string>
    <string name="store">Store</string>
    <string name="sales">Sales</string>
    <string name="reward">Reward</string>
    <string name="faq">FAQ</string>
    <string name="customer_service">Customer Service</string>
    <string name="admin_level">Admin Level</string>
    <string name="logout">Logout</string>
    <string name="name">Nama</string>
    <string name="empty_value">-</string>
    <string name="no_handphone">No. Handphone</string>
    <string name="email">Email</string>
    <string name="potition">Potition</string>
    <string name="bank">Bank</string>
    <string name="branch">Branch</string>
    <string name="account_number">Account Number</string>
    <string name="account_name">Account Name</string>
    <string name="total_product">Total Keseluruhan Product :</string>
    <string name="claim_by">Claim By</string>
    <string name="status">Status</string>
    <string name="point">Point</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone">Phone</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="type">Type</string>
    <string name="option_list">Option List</string>
    <string name="detail">Detail</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="excel">File Excel</string>
    <string name="manual">Manual</string>
    <string name="task">Task</string>
    <string name="jenis">Jenis</string>
    <string name="nominal">Nominal</string>
    <string name="hintSN">Serial Number</string>
    <string name="kode_qr">Kode QR</string>
    <string name="simpan_data">simpan data</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="add_admin">ADD ADMIN</string>
    <string name="full_name">Full Name</string>
    <string name="admin">Admin</string>
    <string name="non_admin">Non Admin</string>
    <string name="add_customer_service">ADD CUSTOMER SERVICE</string>
    <string name="nama_customer_service">Nama Customer Service</string>
    <string name="wilayah">Wilayah</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="add_faq">ADD FAQ</string>
    <string name="judul_faq">Judul FAQ</string>
    <string name="deskripsi_faq">Deskripsi FAQ</string>
    <string name="add_reward">ADD REWARD</string>
    <string name="nominal_reward">Nominal Reward</string>
    <string name="jumlah_point">Jumlah Point</string>
    <string name="type_reward">Type Reward</string>
    <string name="cash">Cash</string>
    <string name="pulsa">Pulsa</string>
    <string name="add_store">ADD STORE</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="alamat">Alamat</string>
    <string name="change_password">Change Password</string>
    <string name="edit_admin">EDIT ADMIN</string>
    <string name="detail_admin">DETAIL ADMIN</string>
    <string name="edit_customer_service">EDIT CUSTOMER SERVICE</string>
    <string name="detail_customer_service">DETAIL CUSTOMER SERVICE</string>
    <string name="edit_product">EDIT PRODUCT</string>
    <string name="detail_product">DETAIL PRODUCT</string>
    <string name="edit_reward">EDIT REWARD</string>
    <string name="edit_store">EDIT STORE</string>
    <string name="tolak">tolak</string>
    <string name="konfirmasi">konfirmasi</string>
    <string name="detail_pengajuan_member">DETAIL PENGAJUAN MEMBER</string>
    <string name="detail_claim_reward">DETAIL CLAIM REWARD</string>
    <string name="riwayat_reward">Riwayat Reward</string>
    <string name="riwayat_scan">Riwayat Scan</string>
    <string name="detail_sales">DETAIL SALES</string>
    <string name="list_riawayt_reward">LIST RIWAYAT REWARD</string>
    <string name="list_riwayat_scan">LIST RIWAYAT SCAN</string>
    <string name="add_task">ADD TASK</string>
    <string-array name="postion_array">
        <item>--- choose Position ---</item>
        <item>Admin</item>
        <item>Non Admin</item>
    </string-array>
</resources>
