<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_product"
            android:title="@string/product" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_store"
            android:title="@string/store" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_sales"
            android:title="@string/sales" />
        <item
            android:id="@+id/nav_reward"
            android:icon="@drawable/ic_reward"
            android:title="@string/reward" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_cs"
            android:icon="@drawable/ic_cs"
            android:title="@string/customer_service" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_admin_level"
            android:title="@string/admin_level" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

</menu>
