<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:padding="5dp"
            android:background="#F7F7F7">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:textColor="#000"
                android:padding="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:text=":"
                android:textColor="#000"
                android:padding="5dp"
                android:gravity="center_vertical|center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="#000"
                android:text="@string/empty_value"
                android:id="@+id/valueName"
                android:padding="5dp"
                android:layout_weight="2"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:padding="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:textColor="#000"
                android:padding="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:text=":"
                android:textColor="#000"
                android:padding="5dp"
                android:gravity="center_vertical|center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="#000"
                android:text="@string/empty_value"
                android:id="@+id/valueEmail"
                android:padding="5dp"
                android:layout_weight="2"
                android:gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>