<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/empty_value"
            android:textColor="#000"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:background="#E6E6E6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:padding="5dp"
            android:background="#F7F7F7">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:textColor="#000"
                android:padding="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:text=":"
                android:textColor="#000"
                android:padding="5dp"
                android:gravity="center_vertical|center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="#000"
                android:text="@string/empty_value"
                android:id="@+id/valueEmail"
                android:padding="5dp"
                android:layout_weight="2"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:padding="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/jenis"
                android:textColor="#000"
                android:padding="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:text=":"
                android:textColor="#000"
                android:padding="5dp"
                android:gravity="center_vertical|center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="#000"
                android:text="@string/empty_value"
                android:id="@+id/valueJenis"
                android:padding="5dp"
                android:layout_weight="2"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:padding="5dp"
            android:background="#F7F7F7">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/nominal"
                android:textColor="#000"
                android:padding="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:text=":"
                android:textColor="#000"
                android:padding="5dp"
                android:gravity="center_vertical|center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="#000"
                android:text="@string/empty_value"
                android:id="@+id/valueNominal"
                android:padding="5dp"
                android:layout_weight="2"
                android:gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>